--- a/welcome.html
+++ b/welcome.html
@@ -9,7 +9,7 @@
 <body> 
   <div id="welcome-page"> 
     <h2>Welcome, <span id="user-email"></span>!</h2> 
-    <button><a href="./index1.html" style="color: white; text-decoration: none;">Continue with App</a></button> 
+    <button><a href="./index.html" style="color: white; text-decoration: none;">Continue with App</a></button> 
     <br><br>
     <button id="logout-btn">Logout</button> 
   </div> 
