--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
                 <option value="5">5 - Excellent</option> 
             </select> 
             <textarea id="message" placeholder="Your Feedback" required></textarea> 
-            <button type="submit"><a href="./index1.html" style="text-decoration: none; color: white;">Submit Feedback</a></button> 
+            <button type="submit"><a href="./index.html" style="text-decoration: none; color: white;">Submit Feedback</a></button> 
         </form> 
     </div> 
  
